Actualizar el nombre corto en el manifiesto para reflejar correctamente la farmacia guardia en Úbeda

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Farmacia-guardia",
-  "short_name": "NombreCorto",
+  "short_name": "Farmacia guardia Úbeda",
   "description": "Web para encontrar la farmacia de guardia disponible en Úbeda.",
   "lang": "es-ES",
   "start_url": ".",
