--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,26 @@
 {
-  "name": "Farmacia-guardia",
-  "short_name": "Farmacia guardia Úbeda",
+  "name": "Farmacia de Guardia Úbeda",
+  "short_name": "Farmacia Úbeda", 
   "description": "Web para encontrar la farmacia de guardia disponible en Úbeda.",
   "lang": "es-ES",
-  "start_url": ".",
+  "id": "/farmacia-guardia/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#00a86b",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
